--- a/PathsightAd/index.html
+++ b/PathsightAd/index.html
@@ -387,7 +387,7 @@
                 <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Download on the App Store</a>
             </div>
             <div style="margin-top: 50px;">
-                <img src="stragmascot.png" alt="Pathsight App Mascot" style="max-width: 50%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
+                <img src="stragmascot.png" alt="Pathsight App Mascot" style="max-width: 100%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
             </div>
         </div>
     </section>
@@ -463,40 +463,43 @@
             <h2 class="section-title">Choose Your Plan</h2>
             <div class="pricing-cards">
                 <div class="pricing-card fade-in fade-in-1">
-                    <h3>Free</h3>
-                    <div class="price">$0</div>
+                    <h3>Free Trial</h3>
+                    <div class="price">3 Days</div>
                     <ul>
-                        <li>5 routes total</li>
+                        <li>Full access to all features</li>
+                        <li>Unlimited routes</li>
                         <li>Gemini-powered directions</li>
-                        <li>Basic route information</li>
+                        <li>Route history</li>
                         <li>Weather information</li>
+                        <li>No payment required to start</li>
                     </ul>
-                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Get Started</a>
+                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Try Free</a>
                 </div>
                 <div class="pricing-card popular fade-in fade-in-2">
-                    <h3>Basic</h3>
-                    <div class="price">$2.99<span style="font-size: 1rem; color: #999;">/month</span></div>
+                    <h3>Monthly</h3>
+                    <div class="price">$3.99<span style="font-size: 1rem; color: #999;">/month</span></div>
                     <ul>
-                        <li>200 routes per month</li>
+                        <li>Unlimited routes</li>
                         <li>Gemini-powered directions</li>
                         <li>Route history</li>
                         <li>Weather information</li>
                         <li>All preferences & customizations</li>
+                        <li>3-day free trial included</li>
                     </ul>
-                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Choose Basic</a>
+                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Choose Monthly</a>
                 </div>
                 <div class="pricing-card fade-in fade-in-3">
-                    <h3>Pro</h3>
-                    <div class="price">$6.99<span style="font-size: 1rem; color: #999;">/month</span></div>
+                    <h3>Yearly</h3>
+                    <div class="price">$19.99<span style="font-size: 1rem; color: #999;">/year</span></div>
                     <ul>
-                        <li>500 routes per month</li>
-                        <li>Gemini-powered directions</li>
-                        <li>Route history</li>
-                        <li>Weather information</li>
-                        <li>All preferences & customizations</li>
-                        <li>Priority support</li>
+                        <li>All monthly features</li>
+                        <li>Just $1.67 per month</li>
+                        <li>Save over 58% vs monthly</li>
+                        <li>Unlimited routes</li>
+                        <li>Full access to all current and future features</li>
+                        <li>3-day free trial included</li>
                     </ul>
-                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Choose Pro</a>
+                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Best Value</a>
                 </div>
             </div>
         </div>
@@ -537,7 +540,7 @@
             </div>
             <div class="copyright">
                 <p>&copy; 2025 Pathsight. All rights reserved.</p>
-                <p><a href="https://mhev.github.io/Pathsight/" style="color: #888;">Privacy Policy</a> | <a href="https://mhev.github.io/Pathsight/" style="color: #888;">Terms of Service</a></p>
+                <p><a href="#" style="color: #888;">Privacy Policy</a> | <a href="#" style="color: #888;">Terms of Service</a></p>
             </div>
         </div>
     </footer>
