--- a/GymLensAd/index.html
+++ b/GymLensAd/index.html
@@ -384,7 +384,7 @@
             <h1 class="fade-in fade-in-1">Your Pocket Personal Trainer</h1>
             <p class="fade-in fade-in-2">GymLens turns photos of gym equipment into personalized workout routines. Just snap a picture, and our AI creates the perfect workout based on the equipment available to you.</p>
             <div class="fade-in fade-in-3">
-                <a href="#" class="app-store-btn">Download on the App Store</a>
+                <a href="https://apps.apple.com/us/app/gymlens/id6744256958" class="app-store-btn">Download on the App Store</a>
             </div>
             <div style="margin-top: 50px;">
                 <img src="gympreview.png" alt="GymLens App Demo" style="max-width: 50%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
@@ -473,7 +473,7 @@
                         <li>Injury accommodation</li>
                         <li>No payment required</li>
                     </ul>
-                    <a href="#" class="app-store-btn">Start Free Trial</a>
+                    <a href="https://apps.apple.com/us/app/gymlens/id6744256958" class="app-store-btn">Start Free Trial</a>
                 </div>
                 <div class="pricing-card fade-in fade-in-2">
                     <h3>Monthly</h3>
@@ -486,7 +486,7 @@
                         <li>Track your progress</li>
                         <li>Regular updates</li>
                     </ul>
-                    <a href="#" class="app-store-btn">Choose Monthly</a>
+                    <a href="https://apps.apple.com/us/app/gymlens/id6744256958" class="app-store-btn">Choose Monthly</a>
                 </div>
                 <div class="pricing-card popular fade-in fade-in-3">
                     <h3>Yearly</h3>
@@ -499,7 +499,7 @@
                         <li>Unlimited workout generation</li>
                         <li>Priority support</li>
                     </ul>
-                    <a href="#" class="app-store-btn">Choose Yearly</a>
+                    <a href="https://apps.apple.com/us/app/gymlens/id6744256958" class="app-store-btn">Choose Yearly</a>
                 </div>
             </div>
         </div>
