--- a/GymLensAd/index.html
+++ b/GymLensAd/index.html
@@ -387,7 +387,7 @@
                 <a href="https://apps.apple.com/us/app/gymlens/id6744256958" class="app-store-btn">Download on the App Store</a>
             </div>
             <div style="margin-top: 50px;">
-                <img src="gympreview.png" alt="GymLens App Demo" style="max-width: 50%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
+                <img src="gymlensgirl.jpeg" alt="GymLens App Demo" style="max-width: 50%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
             </div>
         </div>
     </section>
