--- a/Pathsight/index.html
+++ b/Pathsight/index.html
@@ -235,7 +235,7 @@
     <!-- CONTACT -->
     <div class="contact">
       <h2>Contact Us ✉️</h2>
-      <p>Need help or have feedback? Email <a href="mailto:support@pathsight.com">support@pathsight.com</a>.</p>
+      <p>Need help or have feedback? Email <a href="mailto:support@pathsight.com">heverlym@gmail.com</a>.</p>
     </div>
 
     <!-- PRIVACY POLICY -->
