--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -315,12 +315,12 @@
     <header>
         <div class="container">
             <nav>
-                <a href="index3.html" class="logo">Hev LLC</a>
+                <a href="index.html" class="logo">Hev LLC</a>
                 <div class="nav-links">
-                    <a href="index3.html">Home</a>
-                    <a href="index3.html#about">About</a>
-                    <a href="index3.html#products">Products</a>
-                    <a href="index3.html#contact">Contact</a>
+                    <a href="index.html">Home</a>
+                    <a href="index.html#about">About</a>
+                    <a href="index.html#products">Products</a>
+                    <a href="index.html#contact">Contact</a>
                 </div>
             </nav>
         </div>
@@ -578,8 +578,8 @@
                 <p>For more information about our apps, please visit the following resources:</p>
                 <ul>
                     <li><a href="terms-of-service.html" class="cta-button">Terms of Service</a></li>
-                    <li><a href="index3.html">Return to Hev LLC Homepage</a></li>
-                    <li><a href="index3.html#contact">Contact Us</a></li>
+                    <li><a href="index.html">Return to Hev LLC Homepage</a></li>
+                    <li><a href="index.html#contact">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -588,7 +588,7 @@
     <footer>
         <div class="container">
             <div class="copyright">
-                <p>&copy; 2023 Hev LLC. All rights reserved.</p>
+                <p>&copy; 2025 Hev LLC. All rights reserved.</p>
             </div>
         </div>
     </footer>
