--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <nav>
                 <a href="#" class="logo">Hev LLC</a>
                 <div class="nav-links">
-                    <a href="#home">Home</a>
+                    <a href="/">Home</a>
                     <a href="#about">About</a>
                     <a href="#products">Products</a>
                     <a href="#contact">Contact</a>
