--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -366,12 +366,12 @@
     <header>
         <div class="container">
             <nav>
-                <a href="index.html" class="logo">Hev LLC</a>
+                <a href="/" class="logo">Hev LLC</a>
                 <div class="nav-links">
-                    <a href="index.html">Home</a>
-                    <a href="index.html#about">About</a>
-                    <a href="index.html#products">Products</a>
-                    <a href="index.html#contact">Contact</a>
+                    <a href="/">Home</a>
+                    <a href="/#about">About</a>
+                    <a href="/#products">Products</a>
+                    <a href="/#contact">Contact</a>
                 </div>
             </nav>
         </div>
@@ -715,8 +715,8 @@
                     <p>For more information about our apps, please visit the following resources:</p>
                     <ul>
                         <li><a href="privacy-policy.html" class="cta-button">Privacy Policy</a></li>
-                        <li><a href="index.html">Return to Hev LLC Homepage</a></li>
-                        <li><a href="index.html#contact">Contact Us</a></li>
+                        <li><a href="/">Return to Hev LLC Homepage</a></li>
+                        <li><a href="/#contact">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
