--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -180,10 +180,10 @@
             <nav>
                 <a href="index3.html" class="logo">Hev LLC</a>
                 <div class="nav-links">
-                    <a href="index3.html">Home</a>
-                    <a href="index3.html#about">About</a>
-                    <a href="index3.html#products">Products</a>
-                    <a href="index3.html#contact">Contact</a>
+                    <a href="/">Home</a>
+                    <a href="/#about">About</a>
+                    <a href="/#products">Products</a>
+                    <a href="/#contact">Contact</a>
                 </div>
             </nav>
         </div>
@@ -192,7 +192,7 @@
     <div class="container">
         <div class="content">
             <h1>Cookie Policy</h1>
-            <p class="date">Last Updated: July 15, 2023</p>
+            <p class="date">Last Updated: May 1, 2025</p>
 
             <p>This Cookie Policy explains how Hev LLC ("we", "us", or "our") uses cookies and similar technologies when you visit our website or use our Pathsight navigation application (collectively, the "Service"). This policy explains what these technologies are and why we use them, as well as your rights to control our use of them.</p>
             
@@ -335,7 +335,7 @@
     <footer>
         <div class="container">
             <div class="copyright">
-                <p>&copy; 2023 Hev LLC. All rights reserved.</p>
+                <p>&copy; 2025 Hev LLC. All rights reserved.</p>
             </div>
         </div>
     </footer>
