--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -178,7 +178,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="index3.html" class="logo">Hev LLC</a>
+                <a href="/" class="logo">Hev LLC</a>
                 <div class="nav-links">
                     <a href="/">Home</a>
                     <a href="/#about">About</a>
@@ -323,11 +323,10 @@
             <p>If you have any questions about our use of cookies or other technologies, please contact us at:</p>
             <p>
                 Hev LLC<br>
-                123 Innovation Drive<br>
-                San Francisco, CA 94103<br>
+                2400 E 6th St<br>
+                Austin, TX 78702<br>
                 United States<br>
-                Email: privacy@hevllc.com<br>
-                Phone: +1 (555) 123-4567
+                Email: btrees309@gmail.com<br>
             </p>
         </div>
     </div>
