--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="#" class="logo">Hev LLC</a>
+                <a href="/" class="logo">Hev LLC</a>
                 <div class="nav-links">
                     <a href="/">Home</a>
                     <a href="#about">About</a>
@@ -301,8 +301,8 @@
 
     <section id="home" class="hero">
         <div class="container">
-            <h1>Innovative Navigation Solutions</h1>
-            <p>Hev LLC is committed to revolutionizing how people navigate their world. Our flagship product, Pathsight, represents the future of intelligent navigation.</p>
+            <h1>Innovative Mobile Solutions</h1>
+            <p>Hev LLC is a software company dedicated to creating innovative apps that enhance everyday life. From AI-powered navigation and fitness to community marketplaces, we build technology that connects people with their world.</p>
             <a href="#products" class="btn">Explore Our Products</a>
         </div>
     </section>
@@ -386,28 +386,14 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Address</h4>
-                            <p>123 Innovation Drive, San Francisco, CA 94103, United States</p>
+                            <p>2400 E 6th St, Austin, TX 78702, United States</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>contact@hevllc.com</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone-alt"></i>
-                        <div>
-                            <h4>Phone</h4>
-                            <p>+1 (555) 123-4567</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-clock"></i>
-                        <div>
-                            <h4>Business Hours</h4>
-                            <p>Monday - Friday: 9:00 AM - 5:00 PM PST</p>
+                            <p>btrees309@gmail.com</p>
                         </div>
                     </div>
                 </div>
