--- a/index.html
+++ b/index.html
@@ -288,11 +288,12 @@
     <header>
         <div class="container">
             <nav>
-                <a href="/" class="logo">Hev LLC</a>
+                <a href="#" class="logo">Hev LLC</a>
                 <div class="nav-links">
                     <a href="/">Home</a>
                     <a href="#about">About</a>
                     <a href="#products">Products</a>
+                    <a href="support.html">Support</a>
                     <a href="#contact">Contact</a>
                 </div>
             </nav>
@@ -386,14 +387,28 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Address</h4>
-                            <p>2400 E 6th St, Austin, TX 78702, United States</p>
+                            <p>123 Innovation Drive, San Francisco, CA 94103, United States</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>btrees309@gmail.com</p>
+                            <p>contact@hevllc.com</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-phone-alt"></i>
+                        <div>
+                            <h4>Phone</h4>
+                            <p>+1 (555) 123-4567</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-clock"></i>
+                        <div>
+                            <h4>Business Hours</h4>
+                            <p>Monday - Friday: 9:00 AM - 5:00 PM PST</p>
                         </div>
                     </div>
                 </div>
@@ -414,6 +429,7 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#products">Products</a></li>
+                        <li><a href="support.html">Support</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -422,7 +438,8 @@
                     <ul>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                         <li><a href="terms-of-service.html">Terms of Service</a></li>
-                        <li><a href="cookie-policy.html">Cookie Policy</a></li>
+                        <li><a href="support.html">Support & FAQs</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
