--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <a href="/">Home</a>
                     <a href="#about">About</a>
                     <a href="#products">Products</a>
-                    <a href="support.html">Support</a>
+                    <a href="/support">Support</a>
                     <a href="#contact">Contact</a>
                 </div>
             </nav>
@@ -429,17 +429,17 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#products">Products</a></li>
-                        <li><a href="support.html">Support</a></li>
+                        <li><a href="/support">Support</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                        <li><a href="terms-of-service.html">Terms of Service</a></li>
-                        <li><a href="support.html">Support & FAQs</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
+                        <li><a href="/privacy-policy">Privacy Policy</a></li>
+                        <li><a href="/terms-of-service">Terms of Service</a></li>
+                        <li><a href="/support">Support & FAQs</a></li>
+                        <li><a href="/cookie-policy">Cookie Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
