--- a/404.html
+++ b/404.html
@@ -9,7 +9,8 @@
         const validPaths = [
             '/support',
             '/privacy-policy',
-            '/terms-of-service'
+            '/terms-of-service',
+            '/cookie-policy'
         ];
         
         // Get the current path
