--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -183,6 +183,7 @@
                     <a href="/">Home</a>
                     <a href="/#about">About</a>
                     <a href="/#products">Products</a>
+                    <a href="/support">Support</a>
                     <a href="/#contact">Contact</a>
                 </div>
             </nav>
@@ -192,7 +193,7 @@
     <div class="container">
         <div class="content">
             <h1>Cookie Policy</h1>
-            <p class="date">Last Updated: May 1, 2025</p>
+            <p class="date">Last Updated: May 1st, 2025</p>
 
             <p>This Cookie Policy explains how Hev LLC ("we", "us", or "our") uses cookies and similar technologies when you visit our website or use our Pathsight navigation application (collectively, the "Service"). This policy explains what these technologies are and why we use them, as well as your rights to control our use of them.</p>
             
@@ -328,6 +329,14 @@
                 United States<br>
                 Email: btrees309@gmail.com<br>
             </p>
+            
+            <h2>7. Related Policies</h2>
+            <p>For more information about how we collect, use, and protect your data, please refer to our:</p>
+            <ul>
+                <li><a href="/privacy-policy">Privacy Policy</a></li>
+                <li><a href="/terms-of-service">Terms of Service</a></li>
+                <li><a href="/support">Support & FAQs</a></li>
+            </ul>
         </div>
     </div>
 
