--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -320,6 +320,7 @@
                     <a href="/">Home</a>
                     <a href="/#about">About</a>
                     <a href="/#products">Products</a>
+                    <a href="/support">Support</a>
                     <a href="/#contact">Contact</a>
                 </div>
             </nav>
@@ -336,7 +337,8 @@
                     <a href="#pathsight">Pathsight</a>
                     <a href="#gymlens">GymLens</a>
                     <a href="#eggsplore">Eggsplore</a>
-                    <a href="terms-of-service.html">Terms of Service</a>
+                    <a href="/terms-of-service">Terms of Service</a>
+                    <a href="/cookie-policy">Cookie Policy</a>
                 </div>
             </div>
             
@@ -421,7 +423,7 @@
                     <li>Objection: You may object to our processing of your personal information.</li>
                     <li>Withdrawal of Consent: You may withdraw your consent at any time where we relied on your consent to process your personal information.</li>
                 </ul>
-                <p>To exercise these rights, please contact us at btrees309@gmail.com.</p>
+                <p>To exercise these rights, please contact us at privacy@hevllc.com.</p>
                 
                 <h3>6. Third-Party Services</h3>
                 <p>Our Services use various third-party services:</p>
@@ -445,7 +447,7 @@
                 <p>If you have any questions about this Privacy Policy, please contact us at:</p>
                 <p>
                     Hev LLC<br>
-                    2400 E 6th St<br>
+                    2400 E 6th Ste<br>
                     Austin, TX 78702<br>
                     United States<br>
                     Email: btrees309@gmail.com<br>
@@ -576,7 +578,7 @@
                 <h2>Additional Resources</h2>
                 <p>For more information about our apps, please visit the following resources:</p>
                 <ul>
-                    <li><a href="terms-of-service.html" class="cta-button">Terms of Service</a></li>
+                    <li><a href="/terms-of-service" class="cta-button">Terms of Service</a></li>
                     <li><a href="/">Return to Hev LLC Homepage</a></li>
                     <li><a href="/#contact">Contact Us</a></li>
                 </ul>
