--- a/support.html
+++ b/support.html
@@ -382,8 +382,9 @@
                     <a href="#pathsight">Pathsight</a>
                     <a href="#gymlens">GymLens</a>
                     <a href="#eggsplore">Eggsplore</a>
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="terms-of-service.html">Terms of Service</a>
+                    <a href="/privacy-policy">Privacy Policy</a>
+                    <a href="/terms-of-service">Terms of Service</a>
+                    <a href="/cookie-policy">Cookie Policy</a>
                 </div>
             </div>
             
@@ -649,8 +650,8 @@
                     <h3>Additional Resources</h3>
                     <p>For more information about our apps, please visit the following resources:</p>
                     <ul>
-                        <li><a href="privacy-policy.html" class="cta-button">Privacy Policy</a></li>
-                        <li><a href="terms-of-service.html" class="cta-button">Terms of Service</a></li>
+                        <li><a href="/privacy-policy" class="cta-button">Privacy Policy</a></li>
+                        <li><a href="/terms-of-service" class="cta-button">Terms of Service</a></li>
                         <li><a href="/">Return to Hev LLC Homepage</a></li>
                     </ul>
                 </div>
