--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -371,6 +371,7 @@
                     <a href="/">Home</a>
                     <a href="/#about">About</a>
                     <a href="/#products">Products</a>
+                    <a href="/support">Support</a>
                     <a href="/#contact">Contact</a>
                 </div>
             </nav>
@@ -387,7 +388,8 @@
                     <a href="#pathsight">Pathsight</a>
                     <a href="#gymlens">GymLens</a>
                     <a href="#eggsplore">Eggsplore</a>
-                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="/privacy-policy">Privacy Policy</a>
+                    <a href="/cookie-policy">Cookie Policy</a>
                 </div>
             </div>
             
@@ -493,7 +495,7 @@
                 </div>
                 
                 <h3>11. Contact Us</h3>
-                <p>If you have any questions about these Terms, please contact us at: btrees309@gmail.com</p>
+                <p>If you have any questions about these Terms, please contact us at:</p>
                 <p>
                     Hev LLC<br>
                     2400 E 6th St<br>
@@ -713,7 +715,7 @@
                     <h3>Additional Resources</h3>
                     <p>For more information about our apps, please visit the following resources:</p>
                     <ul>
-                        <li><a href="privacy-policy.html" class="cta-button">Privacy Policy</a></li>
+                        <li><a href="/privacy-policy" class="cta-button">Privacy Policy</a></li>
                         <li><a href="/">Return to Hev LLC Homepage</a></li>
                         <li><a href="/#contact">Contact Us</a></li>
                     </ul>
