--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -327,7 +327,7 @@
                 2400 E 6th St<br>
                 Austin, TX 78702<br>
                 United States<br>
-                Email: btrees309@gmail.com<br>
+                Email: michael@hevllc.com<br>
             </p>
             
             <h2>7. Related Policies</h2>
