--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>btrees309@gmail.com</p>
+                            <p>michael@hevllc.com</p>
                         </div>
                     </div>
                 </div>
