--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -450,7 +450,7 @@
                     2400 E 6th Ste<br>
                     Austin, TX 78702<br>
                     United States<br>
-                    Email: btrees309@gmail.com<br>
+                    Email: michael@hevllc.com<br>
                 </p>
             </section>
             
