--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -501,7 +501,7 @@
                     2400 E 6th St<br>
                     Austin, TX 78702<br>
                     United States<br>
-                    Email: btrees309@gmail.com<br>
+                    Email: michael@hevllc.com<br>
                 </p>
             </section>
             
