--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hev LLC - Innovative Navigation Solutions</title>
+    <title>Hev LLC - Innovative Mobile Solutions</title>
     <meta name="description" content="Hev LLC is a technology company specializing in innovative navigation solutions, including Pathsight - a revolutionary navigation app.">
     <style>
         :root {
