--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
                             <li>Save time and reduce travel costs</li>
                             <li>Smart scheduling for pet sitters</li>
                         </ul>
-                        <a href="#" target="_blank" class="btn btn-martina">View on App Store</a>
+                        <a href="https://apps.apple.com/us/app/martina/id6748091608" target="_blank" class="btn btn-martina">View on App Store</a>
                     </div>
                 </div>
             </div>
