--- a/index.html
+++ b/index.html
@@ -1091,14 +1091,14 @@
                             <span class="feature-tag">AI</span>
                             <span class="feature-tag">Filter</span>
                         </div>
-                        <h3 class="feature-title">Polly 🐱</h3>
-                        <p class="feature-subtitle">Replace political content with kitten facts</p>
+                        <h3 class="feature-title">Poli-gone 🐱</h3>
+                        <p class="feature-subtitle">Replace political content with kitten or trivia facts</p>
                         <ul class="feature-bullets">
                             <li>Filter political content across all websites</li>
                             <li>Replace with adorable kitten facts and images</li>
                             <li>Maintain political neutrality and balance</li>
                         </ul>
-                        <a href="https://chrome.google.com/webstore/detail/polly/your-extension-id" target="_blank" class="btn btn-polly">Add to Chrome</a>
+                        <a href="https://chrome.google.com/webstore/detail/polly/your-extension-id" target="_blank" class="btn btn-polly">Coming soon</a>
                     </div>
                 </div>
                 
