--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
                             <li>Personalized cocktail recipes</li>
                             <li>Step-by-step mixing instructions</li>
                         </ul>
-                        <a href="#" class="btn btn-boozly">Coming Soon</a>
+                        <a href="https://apps.apple.com/us/app/boozly/id6756075474" class="btn btn-boozly">View on App Store</a>
                     </div>
                 </div>
                 
